# spelling-beetle

./: .gitignore  .hlint.yaml  README.md  cabal.project  flake.nix  hie.yaml  pkgs.nix  spelling-beetle.cabal
.github/workflows/: CI.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
