cabal-version:   2.4
name:            spelling-beetle
version:         1.0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2022 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files: README.md
synopsis:        A Spelling Bee Tool
homepage:        https://github.com/jonascarpay/spelling-beetle#readme

source-repository head
  type:     git
  location: git://github.com/jonascarpay/spelling-beetle.git

executable spelling-beetle
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                >=4.9 && <5
    , boxes
    , containers
    , histogram-simple
    , megaparsec
    , mtl
    , parser-combinators
    , text

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields
